update version and change log

--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -1,12 +1,14 @@
 <html lang="en">
 <body>
 <h2>Change log</h2>
-
 <ul>
     <li>
-        <strong>1.0.6</strong> - first version including change log
+        <strong>1.0.6</strong>
+        <ul>
+            <li>Added User Guide and Change Log to Help Menu</li>
+            <li>Show filenames of open files in window title bar</li>
+        </ul>
     </li>
 </ul>
-
 </body>
 </html>
