--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -3,6 +3,12 @@
 <h2>Change log</h2>
 <ul>
     <li>
+        <strong>1.0.7</strong>
+        <ul>
+            <li>Scripting for mac installer</li>
+        </ul>
+    </li>
+    <li>
         <strong>1.0.6</strong>
         <ul>
             <li>Added User Guide and Change Log to Help Menu</li>
