persist most of the state while the app is open

--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -3,6 +3,12 @@
 <h2>Change log</h2>
 <ul>
     <li>
+        <strong>1.0.8</strong>
+        <ul>
+            <li>Recent files menu, with state kept while the application remains open</li>
+        </ul>
+    </li>
+    <li>
         <strong>1.0.7</strong>
         <ul>
             <li>Scripting for mac installer</li>
