last changes for version 1.0.9, including postinstall script

--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -3,6 +3,13 @@
 <h2>Change log</h2>
 <ul>
     <li>
+        <strong>1.0.9</strong>
+        <ul>
+            <li>Application state persisted using host preferences</li>
+            <li>Title for help windows fixed</li>
+        </ul>
+    </li>
+    <li>
         <strong>1.0.8</strong>
         <ul>
             <li>Recent files menu, with state kept while the application remains open</li>
