do not save encoding because this may cause problems

--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -3,6 +3,14 @@
 <h2>Change log</h2>
 <ul>
     <li>
+        <strong>1.0.10</strong>
+        <ul>
+            <li>Some minor bugs fixed</li>
+            <li>Slightly improved feedback when failure to open a file</li>
+            <li>Working postinstall script for adhoc code signing when using macos installer</li>
+        </ul>
+    </li>
+    <li>
         <strong>1.0.9</strong>
         <ul>
             <li>Application state persisted using host preferences</li>
