add the Restore on Startup Preference

--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -3,6 +3,12 @@
 <h2>Change log</h2>
 <ul>
     <li>
+        <strong>1.0.11</strong>
+        <ul>
+            <li>Added the Restore on Startup preference</li>
+        </ul>
+    </li>
+    <li>
         <strong>1.0.10</strong>
         <ul>
             <li>Some minor bugs fixed</li>
