--- a/src/main/resources/help/user.html
+++ b/src/main/resources/help/user.html
@@ -68,6 +68,12 @@
     <li><strong>Actual Size</strong> - the image will be not scaled</li>
 </ul>
 
+<h3>Preferences menu</h3>
+<ul>
+    <li><strong>Restore on Startup</strong> - if enabled, the last opened file will be reopened when the application starts</li>
+</ul>
+
+
 <h3>Options menu</h3>
 <ul>
     <li><strong>Show Page Numbers</strong> - if enabled, page numbers are shown in the lower left of each panel</li>
