prepare merge to master

--- a/src/main/resources/help/log.html
+++ b/src/main/resources/help/log.html
@@ -3,6 +3,14 @@
 <h2>Change log</h2>
 <ul>
     <li>
+    <strong>1.0.14</strong>
+    <ul>
+        <li>Space now scrolls down when not at the bottom of the page of the main file</li>
+        <li>Fixed a bug where some images with alpha would not render</li>
+        <li>macos build noe creates a .dmg file</li>
+    </ul>
+    </li>
+    <li>
         <strong>1.0.13</strong>
         <ul>
             <li>Save and restore frame dimension</li>
