--- a/src/main/resources/help/user.html
+++ b/src/main/resources/help/user.html
@@ -12,6 +12,7 @@
     <li><strong>cursor down</strong> - zoom out</li>
     <li><strong>plus</strong> - if two files are open, next page of the alternate comic</li>
     <li><strong>minus</strong> - if two files are open, previous page of the alternate comic</li>
+    <li><strong>space</strong> - scroll down if not at the bottom of the page, otherwise next page</li>
 </ul>
 
 
